--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
     "@react-native-google-signin/google-signin": "^11.0.0",
+    "@realm/react": "^0.6.2",
     "expo": "~49.0.15",
     "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
@@ -18,6 +19,7 @@
     "expo-system-ui": "~2.4.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "realm": "^12.5.0",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
