--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
     "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "realm": "^12.5.0",
-    "styled-components": "^6.1.1"
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
